--- a/inspo.html
+++ b/inspo.html
@@ -16,19 +16,19 @@
 
     <div class="content2 row">
       <div class="column">
-        <img src="" />
-        <img src="" />
-        <img src="" />
+        <img src="chaplin.jpeg" />
+        <img src="fencing.JPG" />
+        <img src="yellow.jpeg" />
       </div>
       <div class="column">
-        <img src="" />
-        <img src="" />
-        <img src="" />
+        <img src="ladyslipper.jpeg" />
+        <img src="liverwort.jpeg" />
+        <img src="woodflower.jpeg" />
       </div>
       <div class="column">
-        <img src="" />
-        <img src="" />
-        <img src="" />
+        <img src="mushy1.jpeg" />
+        <img src="heart.jpeg" />
+        <img src="mushy2.jpeg" />
       </div>
     </div>
   </body>
